--- a/.github/workflows/main_kiii.yml
+++ b/.github/workflows/main_kiii.yml
@@ -31,10 +31,10 @@ jobs:
       - name: Build and push container image to registry
         uses: docker/build-push-action@v3
         with:
-          context: .
+          context: ./MusicEShopApplication
           push: true
           tags: index.docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_05A8F38D0CE245F6A639988D7E9B524B }}/leonco1/musiceshop:${{ github.sha }}
-          file: ./Dockerfile
+          file: ./MusicEShopApplication/Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
@@ -60,4 +60,5 @@ jobs:
           app-name: 'kiii'
           slot-name: 'Production'
           images: 'index.docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_05A8F38D0CE245F6A639988D7E9B524B }}/leonco1/musiceshop:${{ github.sha }}'
+
           
