--- a/.github/workflows/main_kiii.yml
+++ b/.github/workflows/main_kiii.yml
@@ -20,20 +20,16 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
-      - name: Log in to container registry
-        uses: docker/login-action@v2
-        with:
-          registry: index.docker.io/
-          username: ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_05A8F38D0CE245F6A639988D7E9B524B }}
-          password: ${{ secrets.AZUREAPPSERVICE_CONTAINERPASSWORD_9609E16187A645A58DDBAE3B9D110D90 }}
-
+      - name: Log in to Docker Hub
+        run: |
+          echo "${{ secrets.AZUREAPPSERVICE_CONTAINERPASSWORD_9609E16187A645A58DDBAE3B9D110D90 }}" | docker login docker.io -u "${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_05A8F38D0CE245F6A639988D7E9B524B }}" --password-stdin
+          echo "Logged in as: ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_05A8F38D0CE245F6A639988D7E9B524B }}"
       - name: Build and push container image to registry
         uses: docker/build-push-action@v3
         with:
           context: ./MusicEShopApplication
           push: true
-          tags: 'index.docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_05A8F38D0CE245F6A639988D7E9B524B }}/musiceshop:${{ github.sha }}'
+          tags: 'docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_05A8F38D0CE245F6A639988D7E9B524B }}/musiceshop:${{ github.sha }}'
           file: ./MusicEShopApplication/Dockerfile
 
   deploy:
@@ -59,6 +55,7 @@ jobs:
         with:
           app-name: 'kiii'
           slot-name: 'Production'
-          images: 'index.docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_05A8F38D0CE245F6A639988D7E9B524B }}/musiceshop:${{ github.sha }}'
+          images: 'docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_05A8F38D0CE245F6A639988D7E9B524B }}/musiceshop:${{ github.sha }}'
           
+
 
